force-app/main/default/objects/AI_Rule__mdt/AI_Rule__mdt.object-meta.xml
<CustomObject>
    <label>AI Rule</label>
    <pluralLabel>AI Rules</pluralLabel>
</CustomObject>