force-app/main/default/objects/AI_Rule__mdt/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>