force-app/main/default/objects/AI_Rule__mdt/fields/Impact_Level__c.field-meta.xml
<CustomField>
    <fullName>Impact_Level__c</fullName>
    <label>Impact Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>