force-app/main/default/objects/AI_Rule__mdt/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <label>Keyword</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>