force-app/main/default/objects/AI_Rule__mdt/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>